// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<td
  className="source-meta source-line-issues source-line-with-issues"
  data-line-number={3}
>
  <span
    aria-label="source_viewer.issues_on_line.show"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <IssueIcon
      type="BUG"
    />
    <span
      className="source-line-issues-counter"
    >
      2
    </span>
  </span>
</td>
`;

exports[`should render correctly: diff issue types 1`] = `
<td
  className="source-meta source-line-issues source-line-with-issues"
  data-line-number={3}
>
  <span
    aria-label="source_viewer.issues_on_line.show"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <IssueIcon
      type="VULNERABILITY"
    />
    <span
      className="source-line-issues-counter"
    >
      2
    </span>
  </span>
</td>
`;

exports[`should render correctly: no issues 1`] = `
<td
  className="source-meta source-line-issues"
  data-line-number={3}
/>
`;
